# rust-space-game

./: Cargo.toml  types.toml
assets/: atlas.kra
assets unused/shaders/: testing.wgsl  thesun.frag
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
spacegame_core/: Cargo.toml
spacegame_core/src/: client.rs  lib.rs  message.rs  network_id.rs  server.rs
src/: lib.rs  main.rs  math.rs
src/client/: controller.rs  highlight.rs  labels.rs  mod.rs  networking.rs  player.rs  ship.rs  sync.rs
src/client/model/: character.rs
src/model/: block.rs  block_map.rs  mod.rs
src/resources/: control_input.rs  entities.rs  keybindings.rs  materials.rs
src/server/: mod.rs  networking.rs  physics.rs  player.rs  ship.rs  sync.rs
src/shared/: binding.rs  mod.rs  placement.rs  remote_refs.rs  ship.rs
src/shared/entities/: mod.rs  physic_object.rs  player.rs
src/shared/events/: generic.rs  mod.rs  player.rs  ship.rs
src/shared/model/: block.rs  block_map.rs  ship.rs
src/shared/networking/: message.rs  mod.rs  network_id.rs  player_id.rs  plugin.rs
src/shared/resources/: block_registry.rs  mod.rs  mouse.rs  position.rs  skybox.rs
src/system/: controller.rs  highlight.rs  mod.rs  movement.rs  placement.rs
