[package]
name = "rust-space-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.1", features = ["dynamic"] }
bevy_rapier3d = "*"
#bevy_polyline = "0.3.0"
bevy_prototype_debug_lines = { version = "0.8", features = ["3d"] }
iyes_loopless = "0.8.0"
bevy-inspector-egui = "0.13.0"

[profile.dev]
opt-level = 1

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1