[package]
name = "spacegame"
version = "0.1.0"
edition = "2021"

#[[bin]]
#name = "client"
#path = "client/src/bin/client.rs"

#[[bin]]
#name = "server"
#path = "server/src/bin/server.rs"

#[workspace]
#members = [
#	"common",
#	"client",
#	"server"
#]

[dependencies]
bevy = { version = "0.8.1", features = ["dynamic", "serialize"] }
bevy_rapier3d = {version = "*", features = ["serde-serialize"]}
#bevy_polyline = "0.3.0"
bevy_prototype_debug_lines = { version = "0.8", features = ["3d"] }
iyes_loopless = "0.8.0"
bevy-inspector-egui = "0.13.0"
serde = {version = "1.0", features = ["derive"]}
bincode = "1.3.1"
local-ip-address = "0.4.8"
bevy_renet = "0.0.5"
fastrand = "1.8.0"

public-ip = "0.2.2"
tokio = {version = "1", features = ["full"]}
rand = {version = "0.8.5"}

bevy_embedded_assets = "0.4.0"
bevy-debug-text-overlay = "3.0.0"
leafwing-input-manager = "0.6.1"

spacegame_proc_macros = { path = "proc_macros" }
spacegame_core = { path = "spacegame_core" }

unique-type-id =  { git = "https://github.com/vityafx/unique-type-id.git", rev = "8d6fd0a3b872897b3a5b3dd8d3621053a5975d79" }
unique-type-id-derive = { git = "https://github.com/vityafx/unique-type-id.git", rev = "8d6fd0a3b872897b3a5b3dd8d3621053a5975d79" }

[profile.dev]
opt-level = 1

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1

